# polyglot-fed-gql

./: Cargo.toml  README.md  go.work  go.work.sum  nx.json  package.json  pnpm-lock.yaml  workspace.json
apps/gateway/: project.json  supergraph.graphql  supergraph.json
apps/gateway/src/: gateway.config.ts
apps/go-service/: go.mod  gqlgen.yml  main.go  project.json  server.go
apps/go-service/graph/: generated.go  resolver.go  schema.resolvers.go
apps/go-service/schema/: schema.graphql
apps/message-service/: Cargo.toml  project.json
apps/message-service/src/: main.rs
apps/message-service/src/cli/: mod.rs
apps/message-service/src/graphql/: broker.rs  schema.rs  types.rs
apps/message-service/src/graphql/server/: mod.rs
apps/nest-service/: jest.config.ts  project.json  webpack.config.js
apps/player-service/: jest.config.ts  project.json  webpack.config.js
apps/player-service/src/: app.module.ts  main.ts
apps/player-service/src/player/: player.model.ts  player.module.ts  player.resolver.ts
apps/rust-service/: Cargo.toml  project.json
apps/rust-service/src/: lib.rs
apps/rust-service/src/cli/: mod.rs
apps/rust-service/src/graphql/: mod.rs
apps/spell-service/: go.mod  project.json  server.go
apps/spell-service/graph/: federation.go  generated.go  resolver.go  schema.resolvers.go
apps/spell-service/graph/model/: models_gen.go
