[package]
name = "message-service"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.90"
async-graphql = { version = "7.0.6", default-features = false, features = ["tracing", "chrono", "playground", "graphiql"] }
async-graphql-axum = "7.0.3"
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.4", default-features = false, features = ["tracing", "typed-header"] }
futures-util = "0.3.30"
futures-channel = "0.3.30"
futures-timer = "3.0.3"
handlebars = "5.1.2"
once_cell = "1.19"
slab = "0.4.9"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1.17"
